fix: Fix vertical content overflow behaviour.

--- a/main.css
+++ b/main.css
@@ -23,9 +23,10 @@
 *:after {
   box-sizing: border-box;
 }
-html,
-body {
+html {
   height: 100%;
+}
+body {
   min-height: 100%;
 }
 
